[tool.poetry]
name = "root"
version = "0.0.0"
description = "flask template"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"  # Explicitly pin to Python 3.11
flask = "2.1.3"     # Modern Flask version
gunicorn = "21.2.0" # Required for Heroku
werkzeug = "3.0.1"  # Compatible with Flask 2.x
jinja2 = "3.1.2"
flask-login = "0.6.3"
flask-sqlalchemy = "3.1.1"
python-dotenv = "1.0.0"  # For environment variables

[tool.poetry.group.dev.dependencies]
# Add dev dependencies here (e.g., pytest, black)

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"